# Coer_MailClient

./: README.md
frontend/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/models/: folder.rs  message.rs  mod.rs
