[package]
name = "src-tauri"
version = "0.1.0"
edition = "2021"
authors = ["Tauri App"]

description = "Coer Mail Client Tauri app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1", features = ["shell-open"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }
